--- a/templates/base.layout.html
+++ b/templates/base.layout.html
@@ -16,6 +16,30 @@
     <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10.15.5/dist/sweetalert2.min.css">
     <link rel="stylesheet" type="text/css" href="/static/css/styles.css">
+
+    <style>
+        .btn-outline-secondary {
+            color: aqua;
+            border-color: #6c757d;
+        }
+
+        p {
+
+        }
+
+        .paraClass {
+            font-size: 3em;
+        }
+
+        .secondClass {
+            color: red;
+        }
+
+        #lastPara {
+            text-decoration: underline;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -129,10 +153,9 @@
         })
     }
 
-    function Prompt()
-    {
+    function Prompt() {
         let toast = function (c) {
-            const {
+            const{
                 msg = '',
                 icon = 'success',
                 position = 'top-end',
@@ -194,7 +217,7 @@
                 title = "",
             } = c;
 
-            const {value: formValues} = await Swal.fire({
+            const { value: result } = await Swal.fire({
                 title: title,
                 html: msg,
                 backdrop: false,
@@ -202,10 +225,10 @@
                 showCancelButton: true,
                 willOpen: () => {
                     const elem = document.getElementById("reservation-dates-modal");
-                    new DateRangePicker(elem, {
+                    const rp = new DateRangePicker(elem, {
                         format: 'yyyy-mm-dd',
                         showOnFocus: true,
-                    });
+                    })
                 },
                 didOpen: () => {
                     document.getElementById("start").removeAttribute("disabled");
@@ -219,8 +242,18 @@
                 }
             })
 
-            if (formValues) {
-                Swal.fire(JSON.stringify(formValues))
+            if (result) {
+                if (result.dismiss !== Swal.DismissReason.cancel) {
+                    if (result.value !== "") {
+                        if (c.callback !== undefined) {
+                            c.callback(result);
+                        }
+                    } else {
+                        c.callback(false);
+                    }
+                } else {
+                    c.callback(false);
+                }
             }
         }
 
@@ -231,7 +264,6 @@
             custom: custom,
         }
     }
-
 
 </script>
 
