--- a/templates/make-reservation.page.html
+++ b/templates/make-reservation.page.html
@@ -1,16 +1,19 @@
-{{template "base" .}}
+{{ template "base" .}}
 
-{{define "content"}}
+{{ define "content"}}
 <div class="container">
     <div class="row">
         <div class="col">
             <h1 class="mt-3">Make Reservation</h1>
 
-            <form method="post" action="" class="needs-validation" novalidate>
-
+            <form method="post" action="/make-reservation" class="needs-validation" novalidate>
+                <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
                 <div class="form-group mt-3">
-                    <label for="first_name">First Name:</label>
-                    <input class="form-control"
+                    <lable for="first_name">First Name:</lable>
+                    {{ with .Form.Errors.Get "first_name"}}
+                    <div class="text-danger">{{.}}</div>
+                    {{ end }}
+                    <input class="form-control {{ with .Form.Errors.Get "first_name"}}is-invalid{{ end }}"
                            id="first_name" autocomplete="off" type='text'
                            name='first_name' value="" required>
                 </div>
@@ -42,4 +45,4 @@
         </div>
     </div>
 </div>
-{{end}}
+{{ end }}
