--- a/templates/generals.page.html
+++ b/templates/generals.page.html
@@ -2,51 +2,51 @@
 
 {{define "content"}}
 
-<div class="container">
+    <div class="container">
 
 
-    <div class="row">
-        <div class="col">
-            <img src="/static/images/generals-quarters.png"
-                 class="img-fluid img-thumbnail mx-auto d-block room-image" alt="room image">
+        <div class="row">
+            <div class="col">
+                <img src="/static/images/generals-quarters.png"
+                     class="img-fluid img-thumbnail mx-auto d-block room-image" alt="room image">
+            </div>
         </div>
-    </div>
 
 
-    <div class="row">
-        <div class="col">
-            <h1 class="text-center mt-4">General's Quarters</h1>
-            <p>
-                Your home away form home, set on the majestic waters of the Atlantic Ocean, this will be a vacation
-                to remember.
-                Your home away form home, set on the majestic waters of the Atlantic Ocean, this will be a vacation
-                to remember.
-                Your home away form home, set on the majestic waters of the Atlantic Ocean, this will be a vacation
-                to remember.
-                Your home away form home, set on the majestic waters of the Atlantic Ocean, this will be a vacation
-                to remember.
-                Your home away form home, set on the majestic waters of the Atlantic Ocean, this will be a vacation
-                to remember.
-                Your home away form home, set on the majestic waters of the Atlantic Ocean, this will be a vacation
-                to remember.
-            </p>
+        <div class="row">
+            <div class="col">
+                <h1 class="text-center mt-4">General's Quarters</h1>
+                <p>
+                    Your home away form home, set on the majestic waters of the Atlantic Ocean, this will be a vacation
+                    to remember.
+                    Your home away form home, set on the majestic waters of the Atlantic Ocean, this will be a vacation
+                    to remember.
+                    Your home away form home, set on the majestic waters of the Atlantic Ocean, this will be a vacation
+                    to remember.
+                    Your home away form home, set on the majestic waters of the Atlantic Ocean, this will be a vacation
+                    to remember.
+                    Your home away form home, set on the majestic waters of the Atlantic Ocean, this will be a vacation
+                    to remember.
+                    Your home away form home, set on the majestic waters of the Atlantic Ocean, this will be a vacation
+                    to remember.
+                </p>
+            </div>
         </div>
-    </div>
 
 
-    <div class="row">
+        <div class="row">
 
-        <div class="col text-center">
+            <div class="col text-center">
 
-            <a id="check-availability-button" href="#!" class="btn btn-success">Check Availability</a>
+                <a id="check-availability-button" href="#!" class="btn btn-success">Check Availability</a>
 
+            </div>
         </div>
+
+
+
+
     </div>
-
-
-
-
-</div>
 
 {{end}}
 
@@ -86,14 +86,15 @@
                 document.getElementById("end").removeAttribute("disabled");
             },
             callback: function(result) {
-                const form = document.getElementById('check-availability-form');
+                console.log("called");
+
+                let form = document.getElementById("check-availability-form");
                 let formData = new FormData(form);
-                formData.append('csrf_token', '{{.CSRFToken}}');
+                formData.append("csrf_token", "{{.CSRFToken}}");
 
                 fetch('/search-availability-json', {
-                    method: 'POST',
-                    body: formData
-
+                    method: "post",
+                    body: formData,
                 })
                     .then(response => response.json())
                     .then(data => {
