--- a/templates/base.layout.html
+++ b/templates/base.layout.html
@@ -153,6 +153,18 @@
             })
         }
 
+        {{ with .Error }}
+        notifyModal("{{ . }}", "error")
+        {{ end }}
+
+        {{ with .Flash }}
+        notifyModal("{{ . }}", "success")
+        {{ end }}
+
+        {{ with .Warning }}
+        notifyModal("{{ . }}", "warning")
+        {{ end }}
+
         function Prompt() {
             let toast = function (c) {
                 const{
